--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "mail-api",
   "version": "1.0.0",
-  "main": "index.js",
   "type": "module",
+  "main": "index.js",
   "dependencies": {
     "express": "^4.18.2",
     "nodemailer": "^6.9.4"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
