--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "mail-api",
   "version": "1.0.0",
-  "type": "module",
   "main": "index.js",
+  "type": "module",
   "dependencies": {
     "express": "^4.18.2",
-    "nodemailer": "^6.9.4"
+    "nodemailer": "^6.9.4",
+    "cors": "^2.8.5"
   },
   "scripts": {
     "start": "node index.js"
